--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,40 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>26-р хороо</title>
+    <style>
+      .loader-container {
+        position: relative;
+        box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+        z-index: 10000;
+      }
+
+      .loader {
+        border: 16px solid #f3f3f3;
+        border-top: 16px solid #3498db;
+        border-radius: 50%;
+        width: 130px;
+        height: 130px;
+        animation: spin 2s linear infinite;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      @keyframes spin {
+        0%   { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="loader-container">
+      <div class="loader"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
