--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,12 @@
     <title>26-р хороо</title>
     <style>
       .loader-container {
-        position: relative;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        left: 0;
         box-sizing: border-box;
         width: 100%;
         height: 100%;
@@ -42,10 +47,6 @@
         width: 130px;
         height: 130px;
         animation: spin 2s linear infinite;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
       }
 
       @keyframes spin {
